src/main/java/com/example/ReservationAppBackEnd/error/ValidationError.java
package com.example.ReservationAppBackEnd.error;

public class ValidationError {
    private String field;
    private String message;

    public ValidationError(String fieldName, String errorMessage) {
    }
}

